Missiles Phase 1 WIP

--- a/Missiles/aam_Firestreak.cfg
+++ b/Missiles/aam_Firestreak.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/aam_Firestreak	
+		model = KKA/Missiles/Firestreak	
 	}
 	NODE {
 		name = missileNode
