--- a/Missiles/aam_K5.cfg
+++ b/Missiles/aam_K5.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/aam_K5
+		model = KKA/Missiles/RS2U
 	}
 	NODE {
 		name = missileNode
@@ -27,9 +27,9 @@
 	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = K-5
+	title = RS-1U
 	manufacturer = Kerbal Kombat Anthology
-	description = The Kaliningrad K-5/RS-1U (AA-1) "Alkali" is the premiere Air-to-Air missile of the USSR, guided by a radar beam emitted from the radar, for use exclusively with the RP-2U radar. Primarily a short-range anti-bomber missile. Warranty void if misused with any other radar.
+	description = The Kaliningrad RS-1U / K-5 (AA-1) "Alkali" is the premiere Air-to-Air missile of the USSR, guided by a radar beam emitted from the radar, for use exclusively with the RP-2U radar. Primarily a short-range anti-bomber missile. Warranty void if misused with any other radar.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
