--- a/Missiles/aam_R40.cfg
+++ b/Missiles/aam_R40.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/aam_R40R
+		model = KKA/Missiles/R40R
 	}
 	NODE {
 		name = missileNode
@@ -126,7 +126,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/aam_R40T
+		model = KKA/Missiles/R40T
 	}
 		
 	NODE {
