--- a/Missiles/aam_R530.cfg
+++ b/Missiles/aam_R530.cfg
@@ -11,7 +11,7 @@
 
 	// --- asset parameters ---
 	MODEL {
-		model = KKA/Missiles/aam_R530
+		model = KKA/Missiles/R530
 	}
 	NODE {
 		name = missileNode
@@ -128,7 +128,7 @@ PART {
 
 	// --- asset parameters ---
 	MODEL {
-		model = KKA/Missiles/aam_R530
+		model = KKA/Missiles/R530
 	}
 	NODE {
 		name = missileNode
