--- a/Missiles/agm_RB04C.cfg
+++ b/Missiles/agm_RB04C.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/agm_RB04C	
+		model = KKA/Missiles/RB04C	
 	}
 	NODE {
 		name = missileNode
