--- a/Missiles/sam_Masurca.cfg
+++ b/Missiles/sam_Masurca.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/sam_Masurca
+		model = KKA/Missiles/Masurca
 	}
 	NODE {
 		name = missileNode
