--- a/Missiles/aam_R3.cfg
+++ b/Missiles/aam_R3.cfg
@@ -10,7 +10,7 @@
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/aam_R3
+		model = KKA/Missiles/R3
 	}
 	NODE {
 		name = missileNode
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = R-3R
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel K-13/R-3R (AA-2) "Atoll" is a Short Ranged Radar Guided Air to Air missile developed in the mid 60's. Short, Similar in appearance and function to the AIM-9 Sidewinder, small and easily mountable to most aircraft. Warning: Do not mistake this for an AIM-9.
+	description = The Vympel R-3R / K-13 (AA-2) "Atoll" is a Short Ranged Radar Guided Air to Air missile developed in the mid 60's. Short, Similar in appearance and function to the AIM-9 Sidewinder, small and easily mountable to most aircraft. Warning: Do not mistake this for an AIM-9.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
