--- a/Missiles/sam_MIM23.cfg
+++ b/Missiles/sam_MIM23.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/sam_MIM23
+		model = KKA/Missiles/MIM23
 	}
 	NODE {
 		name = missileNode
