--- a/Missiles/sam_MIM3.cfg
+++ b/Missiles/sam_MIM3.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/sam_MIM3
+		model = KKA/Missiles/MIM3
 	}
 	NODE {
 		name = missileNode
