--- a/Missiles/sam_RIM8.cfg
+++ b/Missiles/sam_RIM8.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/sam_RIM8
+		model = KKA/Missiles/RIM8
 	}
 	NODE {
 		name = missileNode
