--- a/Missiles/ssm_9M14.cfg
+++ b/Missiles/ssm_9M14.cfg
@@ -10,7 +10,7 @@ PART {
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/ssm_9M14
+		model = KKA/Missiles/9M14
 	}
 	NODE {
 		name = missileNode
