--- a/EW/Balancing/MM_KField.cfg
+++ b/EW/Balancing/MM_KField.cfg
@@ -59,7 +59,7 @@
 }
 @PART[HQ-9]:NEEDS[SMA] {
 	@title = HQ-9 Red Banner
-	@description = The HQ-9 "Red Banner 9" Medium-to-Long range active radar homing Surface-to-Air Missile. Similar in capability to the Russian S-300 and American Patriot systems. The naval variant, HHQ-9, appears to be identical to the land-based variant. HHQ-9 is equipped in the PLAN Type 052C Lanzhou class destroyer in VLS launch tubes.
+	@description = The HQ-9 "Red Banner 9" (CSA-9) Medium-to-Long range active radar homing Surface-to-Air Missile. Similar in capability to the Russian S-300 and American Patriot systems. The naval variant, HHQ-9, appears to be identical to the land-based variant. HHQ-9 is equipped in the PLAN Type 052C Lanzhou class destroyer in VLS launch tubes.
 	@MODULE[MissileLauncher] {
 		%shortName = HQ-9
 	}
