--- a/Missiles/aam_AIM4A.cfg
+++ b/Missiles/aam_AIM4A.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = AIM-4A Falcon
 	manufacturer = Kerbal Kombat Anthology
-	description = The Hughes AIM-4 "Falcon" was one of the first missiles designed by Hughes Aircraft. Highly expensive, volatile, and prone to missing, it represents the pinnacle of Hughes Aircraft's ingenuity. With a hit rate of less than 10%, it strikes fear into the heart of any enemies. Warranty void if engine is lit.
+	description = The Hughes AIM-4 "Falcon" Short-Range Semi-Active Radar Homing Air-to-Air Missile is one of the first missiles designed by Hughes Aircraft. Highly expensive, volatile, and prone to missing, it represents the pinnacle of Hughes Aircraft's ingenuity. With a hit rate of less than 10%, it strikes fear into the heart of any enemies. Warranty void if engine is lit. The missile entered service with the USAF in 1956.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
