--- a/Missiles/aam_K13.cfg
+++ b/Missiles/aam_K13.cfg
@@ -4,13 +4,13 @@
 	//
 
 	// --- general parameters ---
-	name = aam_R40R
+	name = aam_R3R
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/R40R
+		model = KKA/Missiles/R3
 	}
 	NODE {
 		name = missileNode
@@ -27,13 +27,14 @@
 	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = R-40R
+	title = R-3R
 	manufacturer = Kerbal Kombat Anthology
-	description = The Bisnovat (later Molniya then Vympel) R-40R (AA-6) “Arcid” is a long-range air-to-air radar guided missile developed in the 1960s by the Soviet Union specifically for the MiG-25P interceptor, but can also be carried by the later MiG-31. It is the largest air-to-air missile in the world to ever go into production. Do not mistake this for a can of WD-40.
+	description = The Vympel R-3R (AA-2) "Atoll C" Short Ranged Radar Guided Air to Air missile of the K-13 Complex developed in the mid 60's. Short, Similar in appearance and function to the AIM-9 Sidewinder, small and easily mountable to most aircraft. Warning: Do not mistake this for an AIM-9.
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 0.090
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -43,7 +44,7 @@
 
 	MODULE {
 		name = MissileLauncher
-		shortName = R-40R
+		shortName = R-3R
 		guidanceActive = true
 		
 		// --- Targeting ---
@@ -52,7 +53,7 @@
 		targetingType = radar
 		activeRadarRange = 0
 		maxOffBoresight = 20
-		lockedSensorFOV = 2
+		lockedSensorFOV = 4
 		radarLOAL = false
 		
 		//Terminal Guidance
@@ -68,25 +69,25 @@
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 10
+		DetonationDistance = 1
 
 		// --- Propulsion ---
-		thrust = 40
-		cruiseThrust = 15
+		thrust = 20
+		cruiseThrust = 0
 		dropTime = 0.1
-		boostTime = 4.5
-		cruiseTime = 240
+		boostTime = 4
+		cruiseTime = 0
 		decoupleSpeed = 5
 		decoupleForward = false
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 575
+		optimumAirspeed = 857
 		liftArea = 0.002
 		steerMult = 4
-		maxTorque = 200
-		maxAoA = 20
-		maxTurnRateDPS = 7.5
+		maxTorque = 24
+		maxAoA = 22
+		maxTurnRateDPS = 22
 		torqueRampUp = 100
 		
 		// --- Booster & Animation & Sound ---
@@ -95,14 +96,14 @@
 		boosterDecoupleSpeed = 2
 		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
-		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
+		boostExhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 4000
-		maxStaticLaunchRange = 50000
+		minStaticLaunchRange = 200
+		maxStaticLaunchRange = 4000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
@@ -111,7 +112,7 @@
 	
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 100
+		tntMass = 7.4
 	}
 }
 PART {
@@ -120,21 +121,20 @@ PART {
 	//
 
 	// --- general parameters ---
-	name = aam_R40T
+	name = aam_R-3
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/R40T
+		model = KKA/Missiles/aam_R3
 	}
-		
 	NODE {
 		name = missileNode
 		transform = missileNode
 		size = 0
 		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-	}	
+	}
 
 	// --- editor parameters ---
 	TechRequired = precisionEngineering
@@ -144,14 +144,14 @@ PART {
 	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = R-40T
+	title = R-3S
 	manufacturer = Kerbal Kombat Anthology
-	description = The Bisnovat (later Molniya then Vympel) R-40T (AA-6) “Arcid” is a long-range air-to-air infrared homing missile developed in the 1960s by the Soviet Union specifically for the MiG-25P interceptor, but can also be carried by the later MiG-31. It is the largest air-to-air missile in the world to ever go into production.
+	description = The Vympel R-3S (AA-2) "Atoll B" Short Ranged Infrared Homing Air to Air missile of the K-13 Complex developed in the mid 60's. Short, small and easily mountable to most aircraft.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.45
+	mass = 0.090
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -161,7 +161,7 @@ PART {
 
 	MODULE {
 		name = MissileLauncher
-		shortName = R-40T
+		shortName = R-3
 		guidanceActive = true
 		
 		// --- Targeting ---
@@ -169,19 +169,18 @@ PART {
 		homingType = aam
 		targetingType = heat
 		activeRadarRange = 0
-		maxOffBoresight = 60
-		lockedSensorFOV = 10
+		maxOffBoresight = 20
+		lockedSensorFOV = 6
 		radarLOAL = false
 		
 		lockedSensorFOVBias {
 			key = 0 1 0 0
-			key = 3 0.7 0 0
-			key = 5 0.5 0 0
+			key = 3 1 0 0
         }
         lockedSensorVelocityBias {
             key = 0 1
-			key = 70 0.5
-			key = 90 0
+			key = 90 0.8
+			key = 180 0
         }
 		
 		//Terminal Guidance
@@ -192,30 +191,30 @@ PART {
 		
 		// --- Missile specific ---
 		agmDescentRatio = 4
-		heatThreshold = 10
+		heatThreshold = 245
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 10
+		DetonationDistance = 1
 
 		// --- Propulsion ---
-		thrust = 40
-		cruiseThrust = 15
+		thrust = 20
+		cruiseThrust = 0
 		dropTime = 0.1
-		boostTime = 4.5
-		cruiseTime = 240
+		boostTime = 4
+		cruiseTime = 0
 		decoupleSpeed = 5
 		decoupleForward = false
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 575
+		optimumAirspeed = 857
 		liftArea = 0.002
 		steerMult = 4
-		maxTorque = 200
-		maxAoA = 20
-		maxTurnRateDPS = 7.5
+		maxTorque = 24
+		maxAoA = 22
+		maxTurnRateDPS = 22
 		torqueRampUp = 100
 		
 		// --- Booster & Animation & Sound ---
@@ -224,14 +223,14 @@ PART {
 		boosterDecoupleSpeed = 2
 		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
-		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
+		boostExhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 1000
-		maxStaticLaunchRange = 25000
+		minStaticLaunchRange = 200
+		maxStaticLaunchRange = 4000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
@@ -240,6 +239,6 @@ PART {
 	
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 100
+		tntMass = 7.4
 	}
 }
