--- a/Missiles/aam_K23.cfg
+++ b/Missiles/aam_K23.cfg
@@ -1,16 +1,16 @@
-PART {
+﻿PART {
 	// Kerbal Space Program - Part Config
 	//
 	//
 
 	// --- general parameters ---
-	name = sam_9M317
+	name = aam_R23R
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
-
+	
 	MODEL {
-		model = KKA/Missiles/9M317
+		model = KKA/Missiles/R23R
 	}
 	NODE {
 		name = missileNode
@@ -18,30 +18,24 @@ PART {
 		size = 0
 		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
 	}
-	NODE {
-		name = missileNodeB
-		transform = missileNodeB
-		size = 0
-		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-	}
 
 	// --- editor parameters ---
 	TechRequired = precisionEngineering
 	entryCost = 2100
-	cost = 4000
-	bdacategory = Missiles
+	cost = 2400
 	category = none
+	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = 9M317 Buk
+	title = R-23R
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel 9M317 missile of the 9K37M1-2 "Buk-M2" (SA-17) "Grizzly" system was developed as a common missile for the Russian Ground Force's Air Defence Forces (PVO) as well as for ship-based PVO of the Russian Navy. Its exterior design bears a resemblance to the Vympel R-37 air-to-air missile. It can be used to engage aerodynamic, ballistic, above-water and radio contrast targets from both land and sea.
+	description = The Vympel R-23R (AA-7) "Apex" Soviet Radar Guided Air to Air missile of the K-23 Complex developed in the Mid 70's exclusively for the MiG-23. Is a medium-range air-to-air missile developed for fighter aircraft. It is comparable to the AIM-7 Sparrow, both in terms of overall performance as well as role. Thankfully, you're able to slap this baby on a lot more things than IRL.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.69
+	mass = 0.22
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -49,9 +43,9 @@ PART {
 	crashTolerance = 5
 	maxTemp = 3600
 
-MODULE {
+	MODULE {
 		name = MissileLauncher
-		shortName = 9M317 Buk
+		shortName = R-23R
 		guidanceActive = true
 		
 		// --- Targeting ---
@@ -59,8 +53,8 @@ MODULE {
 		homingType = aam
 		targetingType = radar
 		activeRadarRange = 0
-		maxOffBoresight = 120
-		lockedSensorFOV = 15
+		maxOffBoresight = 35
+		lockedSensorFOV = 4
 		radarLOAL = false
 		
 		//Terminal Guidance
@@ -71,53 +65,54 @@ MODULE {
 		
 		// --- Missile specific ---
 		agmDescentRatio = 4
-		heatThreshold = 100
+		heatThreshold = 320
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 25
-	
+		DetonationDistance = 10
+
 		// --- Propulsion ---
-		thrust = 550	
-		cruiseThrust = 180
-		dropTime = 0
-		boostTime = 6
-		cruiseTime = 120
-		decoupleSpeed = 10
-		decoupleForward = true
+		thrust = 50
+		cruiseThrust = 12
+		dropTime = 0.1
+		boostTime = 5
+		cruiseTime = 35
+		decoupleSpeed = 5
+		decoupleForward = false
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 1029
-		liftArea = 0.05
-		steerMult = 14
-		maxTorque = 80
-		maxAoA = 34
-		maxTurnRateDPS = 38
-		torqueRampUp = 50
+		optimumAirspeed = 1000
+		liftArea = 0.002
+		steerMult = 4
+		maxTorque = 200
+		maxAoA = 20
+		maxTurnRateDPS = 33
+		torqueRampUp = 100
 		
 		// --- Booster & Animation & Sound ---
 		decoupleBoosters = false
 		boosterMass = 0.7
 		boosterDecoupleSpeed = 2
-		boostTransformName = RIM-2B
+		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
+		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 2000
+		minStaticLaunchRange = 200
 		maxStaticLaunchRange = 35000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
 		engageSLW = false
 	}
-
+	
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 70
+		tntMass = 25
 	}
 }
