--- a/Missiles/aam_K40.cfg
+++ b/Missiles/aam_K40.cfg
@@ -4,13 +4,13 @@
 	//
 
 	// --- general parameters ---
-	name = aam_R3R
+	name = aam_R40R
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/R3
+		model = KKA/Missiles/R40R
 	}
 	NODE {
 		name = missileNode
@@ -27,14 +27,13 @@
 	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = R-3R
+	title = R-40R
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel R-3R / K-13 (AA-2) "Atoll" is a Short Ranged Radar Guided Air to Air missile developed in the mid 60's. Short, Similar in appearance and function to the AIM-9 Sidewinder, small and easily mountable to most aircraft. Warning: Do not mistake this for an AIM-9.
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	description = The Bisnovat (later Molniya then Vympel) R-40R (AA-6) “Arcid” long-range air-to-air radar guided missile of the K-40 Complex developed in the 1960s by the Soviet Union specifically for the MiG-25P interceptor, but can also be carried by the later MiG-31. It is the largest air-to-air missile in the world to ever go into production. Do not mistake this for a can of WD-40.
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.090
+	mass = 0.45
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -44,7 +43,7 @@
 
 	MODULE {
 		name = MissileLauncher
-		shortName = R-3R
+		shortName = R-40R
 		guidanceActive = true
 		
 		// --- Targeting ---
@@ -53,7 +52,7 @@
 		targetingType = radar
 		activeRadarRange = 0
 		maxOffBoresight = 20
-		lockedSensorFOV = 4
+		lockedSensorFOV = 2
 		radarLOAL = false
 		
 		//Terminal Guidance
@@ -69,25 +68,25 @@
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 1
+		DetonationDistance = 10
 
 		// --- Propulsion ---
-		thrust = 20
-		cruiseThrust = 0
+		thrust = 40
+		cruiseThrust = 15
 		dropTime = 0.1
-		boostTime = 4
-		cruiseTime = 0
+		boostTime = 4.5
+		cruiseTime = 240
 		decoupleSpeed = 5
 		decoupleForward = false
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 857
+		optimumAirspeed = 575
 		liftArea = 0.002
 		steerMult = 4
-		maxTorque = 24
-		maxAoA = 22
-		maxTurnRateDPS = 22
+		maxTorque = 200
+		maxAoA = 20
+		maxTurnRateDPS = 7.5
 		torqueRampUp = 100
 		
 		// --- Booster & Animation & Sound ---
@@ -96,14 +95,14 @@
 		boosterDecoupleSpeed = 2
 		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
-		boostExhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
+		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
-		maxStaticLaunchRange = 4000
+		minStaticLaunchRange = 4000
+		maxStaticLaunchRange = 50000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
@@ -112,7 +111,7 @@
 	
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 7.4
+		tntMass = 100
 	}
 }
 PART {
@@ -121,20 +120,21 @@ PART {
 	//
 
 	// --- general parameters ---
-	name = aam_R-3
+	name = aam_R40T
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/aam_R3
+		model = KKA/Missiles/R40T
 	}
+		
 	NODE {
 		name = missileNode
 		transform = missileNode
 		size = 0
 		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
-	}
+	}	
 
 	// --- editor parameters ---
 	TechRequired = precisionEngineering
@@ -144,14 +144,14 @@ PART {
 	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = R-3
+	title = R-40T
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel K-13/R-3R (AA-2) "Atoll" is a Short Ranged Infrared Homing Air to Air missile developed in the mid 60's. Short, small and easily mountable to most aircraft.
+	description = The Bisnovat (later Molniya then Vympel) R-40T (AA-6) “Arcid” long-range air-to-air infrared homing missile of the K-40 Complex developed in the 1960s by the Soviet Union specifically for the MiG-25P interceptor, but can also be carried by the later MiG-31. It is the largest air-to-air missile in the world to ever go into production.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.090
+	mass = 0.45
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -161,7 +161,7 @@ PART {
 
 	MODULE {
 		name = MissileLauncher
-		shortName = R-3
+		shortName = R-40T
 		guidanceActive = true
 		
 		// --- Targeting ---
@@ -169,18 +169,19 @@ PART {
 		homingType = aam
 		targetingType = heat
 		activeRadarRange = 0
-		maxOffBoresight = 20
-		lockedSensorFOV = 6
+		maxOffBoresight = 60
+		lockedSensorFOV = 10
 		radarLOAL = false
 		
 		lockedSensorFOVBias {
 			key = 0 1 0 0
-			key = 3 1 0 0
+			key = 3 0.7 0 0
+			key = 5 0.5 0 0
         }
         lockedSensorVelocityBias {
             key = 0 1
-			key = 90 0.8
-			key = 180 0
+			key = 70 0.5
+			key = 90 0
         }
 		
 		//Terminal Guidance
@@ -191,30 +192,30 @@ PART {
 		
 		// --- Missile specific ---
 		agmDescentRatio = 4
-		heatThreshold = 245
+		heatThreshold = 10
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 1
+		DetonationDistance = 10
 
 		// --- Propulsion ---
-		thrust = 20
-		cruiseThrust = 0
+		thrust = 40
+		cruiseThrust = 15
 		dropTime = 0.1
-		boostTime = 4
-		cruiseTime = 0
+		boostTime = 4.5
+		cruiseTime = 240
 		decoupleSpeed = 5
 		decoupleForward = false
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 857
+		optimumAirspeed = 575
 		liftArea = 0.002
 		steerMult = 4
-		maxTorque = 24
-		maxAoA = 22
-		maxTurnRateDPS = 22
+		maxTorque = 200
+		maxAoA = 20
+		maxTurnRateDPS = 7.5
 		torqueRampUp = 100
 		
 		// --- Booster & Animation & Sound ---
@@ -223,14 +224,14 @@ PART {
 		boosterDecoupleSpeed = 2
 		boostTransformName = boostTransform
 		boostExhaustTransformName = boostTransform
-		boostExhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
+		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
 		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
-		maxStaticLaunchRange = 4000
+		minStaticLaunchRange = 1000
+		maxStaticLaunchRange = 25000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
@@ -239,6 +240,6 @@ PART {
 	
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 7.4
+		tntMass = 100
 	}
 }
