--- a/Missiles/aam_K98.cfg
+++ b/Missiles/aam_K98.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = R-8R
 	manufacturer = Kerbal Kombat Anthology
-	description = The Kaliningrad K-8R/R-8R (AA-3) “Anab” is a Medium Ranged Radar Guided Missile developed for interceptors at the start of the 60's. Uses semi-active radar homing or infrared seeker heads. Best used against bombers that can’t do much in the way of running.
+	description = The Kaliningrad R-8R (AA-3) “Anab” Medium Ranged Radar Guided Missile of the K-98 Complex developed for interceptors at the start of the 60's. Uses semi-active radar homing or infrared seeker heads. Best used against bombers that can’t do much in the way of running.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
@@ -146,7 +146,7 @@ PART {
 	bulkheadProfiles = srf
 	title = R-8T
 	manufacturer = Kerbal Kombat Anthology
-	description = The Kaliningrad K-8T/R-8T (AA-3) “Anab” is a Medium Ranged Radar Guided Missile developed for interceptors at the start of the 60’s as the ultimate iteration of the R-8 series of missiles. Best used against bombers that can’t do much in the way of running.
+	description = The Kaliningrad R-8T (AA-3) “Anab” Medium Ranged Radar Guided Missile of the K-98 Complex developed for interceptors at the start of the 60’s as the ultimate iteration of the R-8 series of missiles. Best used against bombers that can’t do much in the way of running.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
@@ -274,7 +274,7 @@ PART {
 	bulkheadProfiles = srf
 	title = R-98MR
 	manufacturer = Kerbal Kombat Anthology
-	description = The Kaliningrad R-98MR (AA-3) “Advanced Anab” is a Medium Ranged Radar Guided Missile developed for interceptors in the early 70’s as the ultimate iteration of the R-8 series of missiles. Best used against bombers that can’t do much in the way of running.
+	description = The Kaliningrad R-98MR (AA-3) “Advanced Anab” Medium Ranged Radar Guided Missile of the K-98 Complex developed for interceptors in the early 70’s as the ultimate iteration of the R-8 series of missiles. Best used against bombers that can’t do much in the way of running.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
@@ -391,7 +391,7 @@ PART {
 	bulkheadProfiles = srf
 	title = R-98MT
 	manufacturer = Kerbal Kombat Anthology
-	description = The Kaliningrad R-98MT (AA-3) “Advanced Anab” is a Medium Ranged IR Missile developed for interceptors in the early 70’s as the ultimate iteration of the R-8 series of missiles. Best used against bombers that can’t do much in the way of running.
+	description = The Kaliningrad R-98MT (AA-3) “Advanced Anab” is a Medium Ranged infrared Missile of the K-98 Complex developed for interceptors in the early 70’s as the ultimate iteration of the R-8 series of missiles. Best used against bombers that can’t do much in the way of running.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
