--- a/Missiles/aam_RedTop.cfg
+++ b/Missiles/aam_RedTop.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = British Aerospace Red Top
 	manufacturer = Kerbal Kombat Anthology
-	description = The British Aerospace Red Top was the third indigenous British air-to-air missile to enter service, following the de Havilland Firestreak and limited-service Fireflash. Originally a modified version of the Firestreak, Red Top emerged as a much more capable weapon, with roughly double the range, a more sensitive seeker giving limited all-aspect capability, and an even larger warhead than the already-large one in Firestreak. Do not use Red top as a dress.
+	description = The British Aerospace Red Top British Infrared Short-Range Air-to-Air Missile is a third missile to enter British service, following the de Havilland Firestreak and limited-service Fireflash. Originally a modified version of the Firestreak, Red Top emerged as a much more capable weapon, with roughly double the range, a more sensitive seeker giving limited all-aspect capability, and an even larger warhead than the already-large one in Firestreak. Do not use Red top as a dress.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
