--- a/Missiles/agm_AGM28.cfg
+++ b/Missiles/agm_AGM28.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = AGM-28 Hound Dog
 	manufacturer = Kerbal Kombat Anthology
-	description = The North American Aviation AGM-28 "Hound Dog" was a supersonic, turbojet-propelled, air-launched cruise missile developed in 1959 for the United States Air Force. It was primarily designed to be capable of attacking Soviet ground-based air defence sites prior to a potential air attack by B-52 Stratofortress long range bombers during the Cold War. The Hound Dog was first given the designation B-77, then redesignated GAM-77, and finally as AGM-28. The AGM-28 requires a leash when walked by responsible operators.
+	description = The North American Aviation AGM-28 "Hound Dog" supersonic, turbojet-propelled, air-launched cruise missile developed in 1959 for the United States Air Force. It was primarily designed to be capable of attacking Soviet ground-based air defence sites prior to a potential air attack by B-52 Stratofortress long range bombers during the Cold War. The Hound Dog was first given the designation B-77, then redesignated GAM-77, and finally as AGM-28. The AGM-28 requires a leash when walked by responsible operators.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
