--- a/Missiles/agm_KS1.cfg
+++ b/Missiles/agm_KS1.cfg
@@ -27,9 +27,9 @@ PART {
 	bdacategory = Missiles
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = KS-1 Komet
+	title = 4К87 Kometa
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raduga KS-1 "Komet" (SA-1) "Kennel" is a Soviet made 50's Air-to-Ground. If it looks familiar to you then you would be right, it's basically a MiG-15 with more explosives and less man. Warranty void if manned.
+	description = The Raduga 4К87 / KS-1 "Kometа" (SA-1) "Kennel" is a Soviet made 50's Air-to-Ground. If it looks familiar to you then you would be right, it's basically a MiG-15 with more explosives inside a 4G52 warhead and less man. Warranty void if manned.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
@@ -44,7 +44,7 @@ PART {
 
 MODULE {
 		name = MissileLauncher
-		shortName = KS-1
+		shortName = 4К87 Kometa
 		guidanceActive = true
 		
 		// --- Targeting ---
