--- a/Missiles/agm_RB04C.cfg
+++ b/Missiles/agm_RB04C.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = RB-04C
 	manufacturer = Kerbal Kombat Anthology
-	description = The SAAB RB-04C is a Swedish made Anti-Ship Missile. Though lacking in stopping power compared to other such missiles in its time, remember that the RB 04 isn't thousands of kilograms and 10+ meters long. Warranty extended if Du Gamla Du Fria is sung while in use.
+	description = The SAAB RB-04C Swedish Anti-Ship Missile. Though lacking in stopping power compared to other such missiles in its time, remember that the RB 04 isn't thousands of kilograms and 10+ meters long. Warranty extended if Du Gamla Du Fria is sung while in use.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
