--- a/Missiles/sam_9M32.cfg
+++ b/Missiles/sam_9M32.cfg
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = 9M32 Strela-2
 	manufacturer = Kerbal Kombat Anthology
-	description = The KBM 9M32 "Strela-2" missile of a 9K32 (SA-7) "Grail" complex using the 9P54 MANPADS is a Man-Portable or Vehicle Launched IR Guided SAM. Due to it's widespread availability, it's seen action across the world and even today. Warranty void if used as an Anti-Tank weapon.
+	description = The KBM 9M32 "Strela-2" Man-Portable Short-Range Surface-to-Air Missile of a 9K32 (SA-7) "Grail" Complex using the 9P54 MANPADS. Due to it's widespread availability, it's seen action across the world and even today. Warranty void if used as an Anti-Tank weapon.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
