--- a/Missiles/sam_BloodhoundMk1.cfg
+++ b/Missiles/sam_BloodhoundMk1.cfg
@@ -29,7 +29,7 @@ PART {
 	bulkheadProfiles = srf
 	title = Bristol Bloodhound Mk. 1
 	manufacturer = Kerbal Kombat Anthology
-	description = The Bristol Bloodhound Mk. 1 is early British SAM designed to counter high altitude bombers Boost assisted  Sea or Ground launched Long distance Max 24KM at just over Mach 2.
+	description = The Bristol Bloodhound Mk. 1 early British Surface-to-Air Missile designed to counter high altitude bombers Boost assisted  Sea or Ground launched Long distance Max 24KM at just over Mach 2.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
