--- a/Missiles/sam_CIM10.cfg
+++ b/Missiles/sam_CIM10.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = CIM-10 Bomarc
 	manufacturer = Kerbal Kombat Anthology
-	description = The Boeing CIM-10 "Bomarc" (Or IM-99A pre 1962) is a 50's long range Surface to Air Missile developed by America. It's a plane that wanted to be a missile, with two ramjets and a booster to get it from point A to point B. It also gave rise to a pop music group called "The Bomarcs". Warranty void if used in music video footage.
+	description = The Boeing CIM-10 "Bomarc" (IM-99A pre 1962) Long-Range Surface-to-Air Missile developed by America. It's a plane that wanted to be a missile, with two ramjets and a booster to get it from point A to point B. It also gave rise to a pop music group called "The Bomarcs". Warranty void if used in music video footage.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
