--- a/Missiles/sam_Masurca.cfg
+++ b/Missiles/sam_Masurca.cfg
@@ -35,7 +35,7 @@
 	bulkheadProfiles = srf
 	title = Masurca
 	manufacturer = Kerbal Kombat Anthology
-	description = The ECAN Ruelle Masurca missile (MArine SURface Contre-Avions i.e. Naval surface anti-aircraft) was a first-generation naval surface-to-air missile system developed and used by the French Navy. Planned as the primary air defence missile system of the first generation of French guided missile ships, it was used only aboard the two Suffren-class frigates and as a retrofit to the cruiser Colbert.
+	description = The ECAN Ruelle Masurca missile (MArine SURface Contre-Avions i.e. Naval surface anti-aircraft) first-generation naval Medium-Range Surface-to-Air Missile system developed and used by the French Navy. Planned as the primary air defence missile system of the first generation of French guided missile ships, it was used only aboard the two Suffren-class frigates and as a retrofit to the cruiser Colbert.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
