--- a/Missiles/sam_S200.cfg
+++ b/Missiles/sam_S200.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = 5V21 S-200A Angara
 	manufacturer = Kerbal Kombat Anthology
-	description = The OKB-2 5V21/V-860 "Angara" Surface-to-Air missile of the S-200 "Dubna" (SA-5a) "Gammon" complex. Despite being made over 50 years ago, it still sees use today (as is the case with most Soviet systems). Warranty void if fired at a mountain, even if unintentionally.
+	description = The OKB-2 5V21 / V-860 "Angara" Surface-to-Air missile of the S-200 "Dubna" (SA-5a) "Gammon" complex. Despite being made over 50 years ago, it still sees use today (as is the case with most Soviet systems). Warranty void if fired at a mountain, even if unintentionally.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
@@ -51,7 +51,7 @@ PART {
 
 	MODULE {
 		name = MissileLauncher
-		shortName = S-200 5V21
+		shortName = 5V21 S-200 
 		guidanceActive = true
 		
 		// --- Targeting ---
