--- a/Missiles/ssm_SS11.cfg
+++ b/Missiles/ssm_SS11.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = SS.11
 	manufacturer = Kerbal Kombat Anthology
-	description = The Nord Aviation SS.11/AGM-22 entered service with the French Army in 1956. In American service, the missile was designated the AGM-22. Historically, it was used mainly on helicopters and some ground vehicles.
+	description = The Nord Aviation SS.11 / AGM-22 Anti-Tank Guided Missile entered service with the French Army in 1956. In American service, the missile was designated the AGM-22. Historically, it was used mainly on helicopters and some ground vehicles.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
