--- a/Missiles/ssm_Swingfire.cfg
+++ b/Missiles/ssm_Swingfire.cfg
@@ -35,7 +35,7 @@ PART {
 	bulkheadProfiles = srf
 	title = Swingfire
 	manufacturer = Kerbal Kombat Anthology
-	description = The Fairey Engineering Ltd and British Aircraft Corporation Swingfire was a British wire-guided anti-tank missile developed in the 1960s and produced from 1966 until 1993.
+	description = The Fairey Engineering Ltd and British Aircraft Corporation Swingfire wire-guided anti-tank missile developed in the 1960s and produced from 1966 until 1993.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
