--- a/Missiles/aam_AIM9.cfg
+++ b/Missiles/aam_AIM9.cfg
@@ -27,7 +27,7 @@ PART {
 	bulkheadProfiles = srf
 	title = AIM-9B Sidewinder
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raytheon AIM-9B "Sidewinder" is the premiere service model of the missile family, but don't expect much in the way of dogfighting performance from it. Still, it's a good start for things to come. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
+	description = The Raytheon AIM-9B "Sidewinder" premiere service model of the AIM-9 Infrared Short-Range Air-to-Air Missile family, but don't expect much in the way of dogfighting performance from it. Still, it's a good start for things to come. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon. Introduced into service in 1956.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
@@ -152,7 +152,7 @@ PART {
 	bulkheadProfiles = srf
 	title = AIM-9D Sidewinder
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raytheon AIM-9D "Sidewinder" is the nitrogen cooled missile with larger warhead than its predecessor AIM-9B. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
+	description = The Raytheon AIM-9D "Sidewinder" nitrogen cooled Infrared Short-Range Air-to-Air Missile with larger warhead than its predecessor AIM-9B. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
@@ -277,7 +277,7 @@ PART {
 	bulkheadProfiles = srf
 	title = AIM-9L Sidewinder
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raytheon AIM-9L "Sidewinder" is first all aspect Sidewinder missile making it dramatically efficient in close combat. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
+	description = The Raytheon AIM-9L "Sidewinder" Infrared Short-Range Air-to-Air Missile is a first all aspect Sidewinder missile making it dramatically efficient in close combat. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
@@ -403,7 +403,7 @@ PART {
 	bulkheadProfiles = srf
 	title = AIM-9M Sidewinder
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raytheon AIM-9M "Sidewinder" is second all aspect Sidewinder missile utilizing more modern engine over the Lima version. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
+	description = The Raytheon AIM-9M "Sidewinder" Infrared Short-Range Air-to-Air Missile is second all aspect Sidewinder missile utilizing more modern engine over the Lima version. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
@@ -529,7 +529,7 @@ PART {
 	bulkheadProfiles = srf
 	title = AIM-9P Sidewinder
 	manufacturer = Kerbal Kombat Anthology
-	description = The Raytheon AIM-9P "Sidewinder" is further upgrading its engine over the previous AIM-9s. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
+	description = The Raytheon AIM-9P "Sidewinder" Infrared Short-Range Air-to-Air Missile is further upgrading its engine over the previous AIM-9s. The AIM-9 is one of the oldest, least expensive, and most successful air-to-air missiles. Warranty void if used as a blunt weapon.
 	
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
