--- a/Missiles/aam_K5.cfg
+++ b/Missiles/aam_K5.cfg
@@ -4,13 +4,13 @@
 	//
 
 	// --- general parameters ---
-	name = aam_K5
+	name = aam_RS1U
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
 
 	MODEL {
-		model = KKA/Missiles/RS2U
+		model = KKA/Missiles/RS1U
 	}
 	NODE {
 		name = missileNode
@@ -29,7 +29,7 @@
 	bulkheadProfiles = srf
 	title = RS-1U
 	manufacturer = Kerbal Kombat Anthology
-	description = The Kaliningrad RS-1U / K-5 (AA-1) "Alkali" is the premiere Air-to-Air missile of the USSR, guided by a radar beam emitted from the radar, for use exclusively with the RP-2U radar. Primarily a short-range anti-bomber missile. Warranty void if misused with any other radar.
+	description = The Kaliningrad RS-1U (AA-1) "Alkali" of the K-5 Complex is the premiere Air-to-Air missile of the USSR, guided by a radar beam emitted from the radar, for use exclusively with the RP-2U radar. Primarily a short-range anti-bomber missile. Warranty void if misused with any other radar.
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
