--- a/Missiles/sam_9M38.cfg
+++ b/Missiles/sam_9M38.cfg
@@ -1,16 +1,16 @@
-﻿PART {
+PART {
 	// Kerbal Space Program - Part Config
 	//
 	//
 
 	// --- general parameters ---
-	name = aam_R23R
+	name = sam_9M38
 	module = Part
 	author = Toonu
 	rescaleFactor = 1
-	
+
 	MODEL {
-		model = KKA/Missiles/R23R
+		model = KKA/Missiles/9M38
 	}
 	NODE {
 		name = missileNode
@@ -18,24 +18,30 @@
 		size = 0
 		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
 	}
+	NODE {
+		name = missileNodeB
+		transform = missileNodeB
+		size = 0
+		method = FIXED_JOINT //FIXED_JOINT, HINGE_JOINT, LOCKED_JOINT, MERGED_PHYSICS or NO_PHYSICS
+	}
 
 	// --- editor parameters ---
 	TechRequired = precisionEngineering
 	entryCost = 2100
-	cost = 2400
-	category = none
+	cost = 4000
 	bdacategory = Missiles
+	category = none
 	subcategory = 0
 	bulkheadProfiles = srf
-	title = R-23R
+	title = 9M38M1 Buk-M1
 	manufacturer = Kerbal Kombat Anthology
-	description = The Vympel R-23R (AA-7) "Apex" is a Soviet Radar Guided Air to Air missile developed in the Mid 70's exclusively for the MiG-23. Is a medium-range air-to-air missile developed for fighter aircraft. It is comparable to the AIM-7 Sparrow, both in terms of overall performance as well as role. Thankfully, you're able to slap this baby on a lot more things than IRL.
+	description = The Vympel 9M38M1 Medium-Range Surface-to-Air Missile of the 9K37M1 "Buk-M1" (SA-17) "Grizzly" Complex developed as a common missile for the Russian Ground Force's Air Defence Forces (PVO) as well as for ship-based PVO of the Russian Navy. Its exterior design bears a resemblance to the Vympel R-37 air-to-air missile. It can be used to engage aerodynamic, ballistic, above-water and radio contrast targets from both land and sea.
 
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
 	// --- standard part parameters ---
-	mass = 0.22
+	mass = 0.69
 	dragModelType = default
 	maximum_drag = 0.01
 	minimum_drag = 0.01
@@ -43,9 +49,9 @@
 	crashTolerance = 5
 	maxTemp = 3600
 
-	MODULE {
+MODULE {
 		name = MissileLauncher
-		shortName = R-23R
+		shortName = 9M38M1 Buk-M1
 		guidanceActive = true
 		
 		// --- Targeting ---
@@ -53,8 +59,8 @@
 		homingType = aam
 		targetingType = radar
 		activeRadarRange = 0
-		maxOffBoresight = 35
-		lockedSensorFOV = 4
+		maxOffBoresight = 120
+		lockedSensorFOV = 15
 		radarLOAL = false
 		
 		//Terminal Guidance
@@ -65,54 +71,53 @@
 		
 		// --- Missile specific ---
 		agmDescentRatio = 4
-		heatThreshold = 320
+		heatThreshold = 100
 		allAspect = false
 		
 		// --- Warhead ---
 		proxyDetonate = true
-		DetonationDistance = 10
-
+		DetonationDistance = 25
+	
 		// --- Propulsion ---
-		thrust = 50
-		cruiseThrust = 12
-		dropTime = 0.1
-		boostTime = 5
-		cruiseTime = 35
-		decoupleSpeed = 5
-		decoupleForward = false
+		thrust = 550	
+		cruiseThrust = 180
+		dropTime = 0
+		boostTime = 6
+		cruiseTime = 120
+		decoupleSpeed = 10
+		decoupleForward = true
 
 		// --- Aerodynamics ---
 		aero = true
-		optimumAirspeed = 1000
-		liftArea = 0.002
-		steerMult = 4
-		maxTorque = 200
-		maxAoA = 20
-		maxTurnRateDPS = 33
-		torqueRampUp = 100
+		optimumAirspeed = 1029
+		liftArea = 0.05
+		steerMult = 14
+		maxTorque = 80
+		maxAoA = 34
+		maxTurnRateDPS = 38
+		torqueRampUp = 50
 		
 		// --- Booster & Animation & Sound ---
 		decoupleBoosters = false
 		boosterMass = 0.7
 		boosterDecoupleSpeed = 2
-		boostTransformName = boostTransform
+		boostTransformName = RIM-2B
 		boostExhaustTransformName = boostTransform
 		boostExhaustPrefabPath = BDArmory/Models/exhaust/mediumExhaust
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
 		audioClipPath = BDArmory/Sounds/rocketLoop
-		
 
 		// --- Engagement Rules --- 
-		minStaticLaunchRange = 200
+		minStaticLaunchRange = 2000
 		maxStaticLaunchRange = 35000
 		engageAir = true
 		engageMissile = false
 		engageGround = false
 		engageSLW = false
 	}
-	
+
 	MODULE {
 		name = BDExplosivePart
-		tntMass = 25
+		tntMass = 70
 	}
 }
