--- a/Missiles/sam_RIM24.cfg
+++ b/Missiles/sam_RIM24.cfg
@@ -35,8 +35,8 @@
 	bulkheadProfiles = srf
 	title = RIM-24A Tartar
 	manufacturer = Kerbal Kombat Anthology
-	description = The General Dynamics RIM-24 "Tartar" was a medium-range naval surface-to-air missile (SAM), and was among the earliest surface-to-air missiles to equip United States Navy ships.
-	
+	description = The General Dynamics RIM-24 "Tartar" Medium-Range Surface-to-Air Missile was among the earliest surface-to-air missiles to equip United States Navy ships. It was meant to complement the larger RIM-8 Talos and smaller RIM-2 Terrier during the era of 3 T-Missiles, similar to current era of Standard Missiles aboard USN ships. 
+
 	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,0,1
 
