--- a/EW/Balancing/MM_SMA.cfg
+++ b/EW/Balancing/MM_SMA.cfg
@@ -781,7 +781,7 @@
 	@category = none
 	@bdacategory = Missiles
 	@subcategory = 0
-	@title = 5V24 Neva
+	@title = 5V24 S-125 Neva
 	@manufacturer = SM Armory Missiles
 	@description = The Fakel 5V24 / V-600P Surface-to-Air missile of the ACDB S-125 "Neva" (SA-3) "Goa" Complex designed to complement the S-25 and S-75 Systems. It has a shorter effective range and lower engagement altitude than either of its predecessors and also flies slower, but due to its two-stage design it is more effective against more manoeuvrable targets. The missiles reach around Mach 3 in flight.
 	
@@ -801,7 +801,7 @@
 	
 	MODULE {
 		name = MissileLauncher
-		shortName = 5V24 Neva
+		shortName = 5V24 S-125 Neva
 		guidanceActive = true
 		
 		// --- Targeting ---
